# leetify

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
examples/: basic_usage.rs  player_api.rs
scripts/: validate-version.sh
src/: client.rs  error.rs  lib.rs  player.rs  types.rs
