[package]
name = "leetify"
version = "0.1.0"
edition = "2024"

[features]
default = ["player", "rustls-tls"]
# Enable the extended Player API for a more ergonomic interface
player = []
# Use rustls as the TLS backend for reqwest (default)
rustls-tls = ["reqwest/rustls-tls"]
# Use native-tls as the TLS backend for reqwest
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
